# cairn

./: .env.default  .env.development  .env.test  .gitignore  Dockerfile  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  TEMPLATE_FIXES_NEEDED.md  TEMPLATE_ISSUES.md  TODO_APP_PROGRESS.md  alembic.ini  docker-compose.yml  main.md  pyproject.toml  ruff.toml
.github/workflows/: pre-commit.yml  test.yml
assets/: base.py
assets/backends/: __init__.py  local.py  s3.py
cache/: base.py  service.py
cache/backends/: __init__.py  memory.py  redis.py
config/: default.yaml  loader.py  models.py
config/graphs/: breakdown.yaml  categorize.yaml
config/prompts/: loader.py
db/: PATTERNS.md  base.py  connection.py
db/migrations/: env.py
db/models/: __init__.py  todo.py  todo_embedding.py
docs/: BACKENDS.md  DEPLOYMENT.md  GRAPHS.md  TESTING.md  TOOLS.md
lib/aws/: base.py  documentdb.py  s3.py
lib/cairn/: __init__.py  paths.py  singleton.py  stubs.py
memory/: base.py  service.py
memory/backends/: __init__.py  faiss.py  pgvector.py  pinecone.py
scripts/: base.py  seed.py
src/: app.py  settings.py
src/agents/: base.py  llm.py
src/evals/: judge.py  results.py  runner.py
src/graphs/: base.py  breakdown.py  categorize.py  checkpointing.py
src/jobs/: auto_categorize.py  base.py  daily_summary.py  reminder_check.py  scheduler.py
src/models/: state.py  todo.py  todo_embedding.py
src/policies/: base.py  roles.py
src/repositories/: __init__.py  todo.py
src/routers/: base.py  health.py  todos.py
src/security/: auth.py  validation.py
src/services/: base.py  embeddings.py  todo_embeddings.py
src/tools/: __init__.py  context.py  test_auto_import.py  todo_tools.py
src/utils/: datetime.py  logging.py  pagination.py  serialization.py
src/websockets/: manager.py  router.py  todo_events.py
tests/: conftest.py  test_infrastructure.py
tests/assets/: test_storage.py
tests/cache/: test_cache.py
tests/config/: test_config_loader.py
tests/db/: test_connection.py
tests/e2e/: conftest.py  test_full_workflow.py  test_todo_full_workflow.py
tests/evals/: test_judge.py
tests/graphs/: test_graph_base.py
tests/integration/: conftest.py  (+11 more)
(+11 files in other folders)
