[tool.poetry]
name = "cairn"
version = "0.1.0"
description = "Reusable FastAPI framework for agentic Python applications with LangGraph"
authors = ["SonderMind Engineering"]
packages = [
    {include = "src"},
    {include = "config"},
    {include = "db"},
    {include = "memory"},
    {include = "cache"},
    {include = "assets"},
    {include = "lib"},
    {include = "scripts"},
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = "^0.34.0"
pydantic = "^2.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
psycopg2-binary = "^2.9"
httpx = "^0.28.0"
pyyaml = "^6.0.1"
structlog = "^24.0"
apscheduler = "^3.11.0"
websockets = "^12.0"
langgraph = ">=0.2.60"
nest-asyncio = "^1.6.0"
langchain-core = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-anthropic = "^0.2.0"
langchain-community = "^0.3.0"
langchain-huggingface = ">=0.1.0,<1.0.0"
sentence-transformers = ">=3.0.0"
faiss-cpu = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0"
ruff = "^0.8.0"
respx = "^0.22.0"

[tool.poetry.group.aws]
optional = true

[tool.poetry.group.aws.dependencies]
boto3 = "^1.34.0"

[tool.poetry.group.redis]
optional = true

[tool.poetry.group.redis.dependencies]
redis = "^5.0.0"

[tool.poetry.group.pinecone]
optional = true

[tool.poetry.group.pinecone.dependencies]
pinecone-client = "^3.0.0"

[tool.poetry.group.pgvector]
optional = true

[tool.poetry.group.pgvector.dependencies]
pgvector = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--strict-markers -v"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (may need DB or network)",
    "e2e: End-to-end tests (full stack, may need API keys)",
    "eval: Evaluation tests (LLM-as-judge, skip by default)",
]
